fixed alignment of logo

--- a/src/App.css
+++ b/src/App.css
@@ -51,5 +51,5 @@
 }
 
 .logo {
-  height: 15%;
+  vertical-align: text-top !important;
 }
